tests/fixtures/cargo_build/missing_symbol.txt
Compiling demo v0.1.0 (/tmp/demo)
error[E0425]: cannot find value `x` in this scope
 --> src/main.rs:4:20
  |
4 |     println!("{}", x);
  |                    ^ not found in this scope
  |
help: a local variable with a similar name exists: `y`
For more information about this error, try `rustc --explain E0425`.

error: could not compile `demo` (bin "demo") due to 1 previous error
